--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pickle-tourney",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,19 +11,23 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage",
+    "a11y": "pa11y http://localhost:3000"
   },
   "dependencies": {
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.17.9",
+    "clsx": "^2.1.0",
+    "framer-motion": "^10.18.0",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-hot-toast": "^2.4.1",
-    "stripe": "^14.7.0"
+    "stripe": "^14.7.0",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.17.9",
@@ -34,10 +38,12 @@
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
+    "axe-core": "^4.8.3",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
-    "jsdom": "^27.1.0",
+    "jest-axe": "^8.0.0",
+    "pa11y": "^8.0.0",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
